--- a/Tutorial.Rmd
+++ b/Tutorial.Rmd
@@ -103,7 +103,7 @@ Let's walk through it step by step. First we summon the gapminder dataframe and 
 Now let's say we're only interested in African countries. We can combine `select` and `filter` to select only the observations where `continent` is `Africa`.
 
 ```{r}
-year_country_gdp_euro <- gapminder %>%
+year_country_gdp_africa <- gapminder %>%
     filter(continent == "Africa") %>%
     select(year,country,gdpPercap)
 ```
