--- a/index.Rmd
+++ b/index.Rmd
@@ -552,7 +552,7 @@ head(gapminder)
 ```{r}
 
 # rearrange columns
-gap_medium <- gap_medium[,names(gapminder)]
+gap_medium <- gapminder %>%  select(country:gdpPercap)
 head(gap_medium)
 
 # arrange by country, continent, and year
@@ -572,7 +572,7 @@ head(gap_medium)
 
 ----
 
-### Challenge 4
+### Your Turn
 
 1. Subset the results from challenge 3 to select only the `country`, `year`, and `gdpPercap_diff` columns. Use `tidyr` put it in wide format so that countries are rows and years are columns. 
 
