--- a/index.Rmd
+++ b/index.Rmd
@@ -552,7 +552,7 @@ head(gapminder)
 ```{r}
 
 # rearrange columns
-gap_medium <- gapminder %>%  select(country:gdpPercap)
+ap_medium <- gap_medium %>%  select(country, year, pop, continent, lifeExp, gdpPercap)
 head(gap_medium)
 
 # arrange by country, continent, and year
