--- a/Tutorial.Rmd
+++ b/Tutorial.Rmd
@@ -459,7 +459,7 @@ head(gap_medium)
 head(gapminder)
 
 # rearrange columns
-ap_medium <- gap_medium %>%  select(country, year, pop, continent, lifeExp, gdpPercap)
+gap_medium <- gap_medium %>%  select(country, year, pop, continent, lifeExp, gdpPercap)
 head(gap_medium)
 
 #
