--- a/Tutorial.Rmd
+++ b/Tutorial.Rmd
@@ -1,6 +1,16 @@
-% Data Wrangling and Manipulation
-% August 2016, UC Berkeley % updated October 2017
-% Rochelle Terman (rterman@gmail.com) % Josh Quan (joshua.quan@berkeley.edu)
+---
+title: "R Data Wrangling and Manipulation"
+date: "`r format(Sys.time(), '%d %B, %Y')`"
+author:
+- Rochelle Terman (rterman@gmail.com)
+- Josh Quan (joshua.quan@berkeley.edu)
+output:
+  html_document:
+    toc: true
+    toc_float: true
+---
+
+
 
 
 ```{r chunksetup, include=FALSE} 
@@ -9,6 +19,8 @@
 library(dplyr)
 library(tidyr)
 library(ggplot2)
+
+#library(tidyverse)
 ```
 
 # dplyr/tidyr
@@ -19,7 +31,7 @@ library(ggplot2)
 2. ***Tidying*** data into the appropriate format
 3. Attempting to ***describe relationships*** or conduct ***causal inference*** 
 
-# Dataframe Manipulation/Example Dataset
+# Gapminder dataset
 
 For this unit, we'll be working with the "Gapminder" dataset, which is excerpt of the data available at Gapminder.org. For each of 142 countries, the data provides values for life expectancy, GDP per capita, and population, every five years, from 1952 to 2007.
 
@@ -28,7 +40,7 @@ gapminder <- read.csv("data/gapminder-FiveYearData.csv", stringsAsFactors = TRUE
 head(gapminder)
 ```
 
-# Dataframe Manipulation/Base R Functions
+# Base R Functions
 
 So far, you’ve seen the basics of manipulating data frames, e.g. subsetting, merging, and basic calculations. For instance, we can use base R functions to calculate summary statistics across groups of observaitons:
 
@@ -40,7 +52,7 @@ mean(gapminder[gapminder$continent == "Asia", "gdpPercap"])
 
 But this isn't ideal because it involves a fair bit of repetition. Repeating yourself will cost you time, both now and later, and potentially introduce some nasty bugs.
 
-# Dataframe Manipulation/dplyr
+# dplyr and tidyverse
 
 Luckily, the [`dplyr`](https://cran.r-project.org/web/packages/dplyr/dplyr.pdf) package provides a number of very useful functions for manipulating dataframes. These functions will save you time by reducing repetition. As an added bonus, you might even find the `dplyr` grammar easier to read.
 
@@ -66,7 +78,7 @@ Now let's load the package:
 library(dplyr)
 ```
 
-# Dataframe Manipulation/dplyr/select
+# select()
 
 Imagine that we just received the gapminder dataset, but are only interested in a few variables in it. We could use the `select()` function to keep only the variables we select.
 
@@ -86,7 +98,7 @@ head(year_country_gdp)
 
 But, as we will see, `dplyr` makes for much more readible, efficient code because of its *pipe* operator.
 
-# Dataframe Manipulation/dplyr/pipes
+# pipes %>% 
 
 Above, we used what's called 'normal' grammar, but the strengths of `dplyr` lie in combining several functions using *pipes*. Since the pipes grammar is unlike anything we've seen in R before, let's repeat what we've done above using pipes.
 
@@ -98,7 +110,7 @@ Let's walk through it step by step. First we summon the gapminder dataframe and 
 
 **Fun Fact**: There is a good chance you have encountered pipes before in the shell. In R, a pipe symbol is `%>%` while in the shell it is `|.` But the concept is the same!
 
-# Dataframe Manipulation/dplyr/filter
+# filter()
 
 Now let's say we're only interested in African countries. We can combine `select` and `filter` to select only the observations where `continent` is `Africa`.
 
@@ -138,7 +150,7 @@ Create a new dataframe object called `africa_asia_lifeExp` that is filtered by "
  
  
 
-# Dataframe Manipulation/dplyr/Calculations Across Groups
+# Calculations Across Groups
 
 A common task you'll encounter when working with data is running calculations on different groups within the data. For instance, what if we wanted to calculated the mean GDP per capita for each continent?
 
@@ -170,7 +182,7 @@ gapminder$mean.continent.GDP[gapminder$continent == "Oceania"] <- mean(gapminder
 
 You can see how this can get pretty tedious, especially if we want to calculate more complicated or refined statistics. We could use loops or apply functions, but these can be difficult, slow, or error-prone. 
 
-# Dataframe Manipulation/dplyr/apply-split-combine
+# split-apply-combine
 
 The abstract problem we're encountering here is know as "split-apply-combine":
 
@@ -188,7 +200,7 @@ Luckily, `dplyr` offers a much cleaner, straight-forward solution to this proble
 gapminder$mean.continent.GDP <- NULL
 ```
 
-# Dataframe Manipulation/dplyr/group_by
+#group_by()
 
 We've already seen how `filter()` can help us select observations that meet certain criteria (in the above: `continent == "Europe"`). More helpful, however, is the `group_by()` function, which will essentially use every unique criteria that we could have used in `filter()`.
 
@@ -196,7 +208,7 @@ A `grouped_df` can be thought of as a `list` where each item in the `list` is a 
 
 ![](img/dplyr-fig2.png)
 
-# Dataframe Manipulation/dplyr/summarize
+#summarize()
 
 The above was a bit uneventful because `group_by()` is much more exciting in conjunction with the `summarize()` function. This will allow use to create new variable(s) by using functions that repeat for each of the continent-specific data frames. In other words, using the `group_by()` function, we split our original dataframe into multiple pieces, which we then use to run functions (e.g. `mean()` or `sd()`) within `summarize()`.
 
@@ -245,7 +257,7 @@ head(gdp_pop_bycontinents_byyear)
 
 
 
-# Dataframe Manipulation/dplyr/mutate
+#mutate()
 
 What if we wanted to add these values to our original data frame instead of creating a new object? For this, we can use the `mutate()` function, which is similar to `summarize()` except it creates new variables to the same dataframe that you pass into it.
 
@@ -274,7 +286,7 @@ gdp_pop_bycontinents_byyear <- gapminder %>%
 head(gdp_pop_bycontinents_byyear)
 ```
 
-# Dataframe Manipulation/dplyr/arrange
+# arrange()
 
 As a last step, let's say we want to sort the rows in our data frame according to values in a certain column. We can use the `arrange()` function to do this. For instance, let's organize our rows by `year` (recent first), and then by `continent`. 
 
@@ -289,7 +301,7 @@ gapminder_with_extra_vars <- gapminder %>%
 head(gapminder_with_extra_vars)
 ```
 
-### Challenge 3
+# Challenge 3
 
 1. Add a column to the gapminder dataset that contains the total population of the continent of each observation in a given year. For example, if the first observation is Afghanistan in 1952, the new column would contain the population of Asia in 1952. 
 
@@ -310,7 +322,7 @@ Tidy data is easier to work with, because you have a consistent way of referring
 
 For more on the concept of *tidy* data, read Hadley Wickham's paper [here](http://vita.had.co.nz/papers/tidy-data.html)
 
-# Tidying Data/Wide vs. Long Formats
+# Wide vs. Long Formats
 
 > "Tidy datasets are all alike but every messy dataset is messy in its own way." – Hadley Wickham
 
@@ -345,7 +357,7 @@ For the "wide" format each row is often a site/subject/patient and you have mult
 
 You may find data input may be simpler or some other applications may prefer the "wide" format. However, many of R’s functions have been designed assuming you have "long" format data. 
 
-# Tidying Data/Gapminder
+# Gapminder
 
 Lets look at the structure of our original gapminder dataframe:
 
@@ -361,7 +373,7 @@ Despite not having ALL observations in 1 column, this intermediate format makes 
 
 On the other hand, there are some instances in which a purely long or wide format is ideal (e.g. plotting). Likewise, sometimes you'll get data on your desk that is poorly organized, and you'll need to **reshape** it.
 
-# Tidying Data/tidyr
+# tidyr
 
 Thankfully, the `tidyr` package will help you efficiently transform your data regardless of original format.
 
@@ -373,7 +385,7 @@ Thankfully, the `tidyr` package will help you efficiently transform your data re
 library(tidyr)
 ```
 
-# Tidying Data/tidyr/gather
+# gather()
 
 Until now, we’ve been using the nicely formatted original gapminder dataset. This dataset is not quite wide and not quite long -- it's something in the middle, but 'real' data (i.e. our own research data) will never be so well organized. Here let's start with the wide format version of the gapminder dataset.
 
@@ -397,7 +409,7 @@ Notice that we put 3 arguments into the `gather()` function:
 2. the name for the new amalgamated observation variable (`obs_value`), 
 3. the indices of the old observation variables (`3:38`, signalling columns 3 through 38) that we want to gather into one variable. Notice that we don't want to melt down columns 1 and 2, as these are considered "ID" variables.
 
-# Tidying Data/tidyr/select
+#select()
 
 We can also select observation variables using:
 
@@ -428,7 +440,7 @@ head(gap_long)
 
 However you choose to do it, notice that the output collapses all of the measure variables into two columns: one containing new ID variable, the other containing the observation value for that row. 
 
-# Tidying Data/tidyr/separate
+# separate()
 
 You'll notice that in our long dataset, `obstype_year` actually contains 2 pieces of information, the observation type (`pop`, `lifeExp`, or `gdpPercap`) and the `year`.
 
@@ -441,7 +453,7 @@ gap_long_sep <- gap_long %>%
 head(gap_long_sep)
 ```
 
-# Tidying Data/tidyr/spread
+# spread()
 
 The opposite of `gather()` is `spread()`. It spreads our observation variables back out to make a wider table. We can use this function to spread our `gap_long()` to the original "medium" format.
 
@@ -477,7 +489,7 @@ head(gap_medium)
 `dplyr` and `tidyr` have many more functions to help you wrangle and manipulate your data. See the  [Data Wrangling Cheat Sheet](https://www.rstudio.com/wp-content/uploads/2015/02/data-wrangling-cheatsheet.pdf) for more.
 
 
-### Challenges: tidyr
+# Challenge 4
 
 1. Subset the results from challenge #3 (above) to select only the `country`, `year`, and `gdpPercap_diff` columns. Use `tidyr` put it in wide format so that countries are rows and years are columns. 
 
